Fixing some style issue in right panel when overflowing

--- a/src/js/components/createMedicalElements/medicalEvent.module.css
+++ b/src/js/components/createMedicalElements/medicalEvent.module.css
@@ -74,6 +74,10 @@
     padding-top: 0.9em;
     padding-bottom: 0.9em;
     transition: padding 100ms;
+    word-wrap: break-word;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .interruption:hover {
