--- a/src/js/components/patientProfile/patientProfile.module.css
+++ b/src/js/components/patientProfile/patientProfile.module.css
@@ -337,6 +337,10 @@ div.timelineCEBlack {
     padding-top: 0.9em;
     padding-bottom: 0.9em;
     transition: padding 100ms;
+    word-wrap: break-word;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .pregnancy:hover {
